Add a 3 D game of life scalability test

--- a/tests/game_of_life/Makefile
+++ b/tests/game_of_life/Makefile
@@ -5,7 +5,7 @@ FLAGS = -O3 -W -Wall -pedantic -DNDEBUG
 INCLUDES = -I. -I$$HOME/include -L. -L$$HOME/lib -lboost_mpi-mt -lboost_serialization-mt -lzoltan
 CXX = mpic++ $(FLAGS)
 
-all: game_of_life_test scalability
+all: game_of_life_test scalability scalability3d
 
 game_of_life_test: game_of_life_test.cpp ../../dccrg.hpp Makefile
 	$(CXX) game_of_life_test.cpp $(INCLUDES) -o game_of_life_test
@@ -13,6 +13,9 @@ game_of_life_test: game_of_life_test.cpp ../../dccrg.hpp Makefile
 scalability: scalability.cpp ../../dccrg.hpp Makefile
 	$(CXX) scalability.cpp $(INCLUDES) -o scalability
 
+scalability3d: scalability3d.cpp ../../dccrg.hpp Makefile
+	$(CXX) scalability3d.cpp $(INCLUDES) -o scalability3d
+
 c: clean
 clean:
-	rm -f game_of_life_test scalability
+	rm -f game_of_life_test scalability scalability3d
