Add a 3-d scalability test with a randomly refined grid

--- a/tests/game_of_life/Makefile
+++ b/tests/game_of_life/Makefile
@@ -5,7 +5,7 @@ FLAGS = -O3 -W -Wall -pedantic -DNDEBUG
 INCLUDES = -I. -I$$HOME/include -L. -L$$HOME/lib -lboost_mpi -lboost_serialization -lzoltan
 CXX = mpic++ $(FLAGS)
 
-all: game_of_life_test scalability scalability3d refined
+all: game_of_life_test scalability scalability3d refined refined_scalability3d
 
 game_of_life_test: game_of_life_test.cpp ../../dccrg.hpp Makefile
 	$(CXX) game_of_life_test.cpp $(INCLUDES) -o game_of_life_test
@@ -19,6 +19,9 @@ scalability3d: scalability3d.cpp ../../dccrg.hpp Makefile
 refined: refined.cpp ../../dccrg.hpp Makefile
 	$(CXX) refined.cpp $(INCLUDES) -o refined
 
+refined_scalability3d: refined_scalability3d.cpp ../../dccrg.hpp Makefile
+	$(CXX) refined_scalability3d.cpp $(INCLUDES) -o refined_scalability3d
+
 c: clean
 clean:
-	rm -f game_of_life_test scalability scalability3d refined
+	rm -f game_of_life_test scalability scalability3d refined refined_scalability3d
