--- a/tests/refine/Makefile
+++ b/tests/refine/Makefile
@@ -1,6 +1,6 @@
 #FLAGS = -O3 -W -Wall -pedantic -DNDEBUG
 FLAGS = -O0 -g -W -Wall -pedantic
-INCLUDES = -I. -I$$HOME/include -L. -L$$HOME/lib -lboost_mpi-mt -lboost_serialization-mt -lzoltan
+INCLUDES = -I. -I$$HOME/include -L. -L$$HOME/lib -lboost_mpi -lboost_serialization -lzoltan
 CXX = mpic++ $(FLAGS)
 
 all: refine_simple unrefine_simple
