Add a 1d game of life scalability test

--- a/tests/game_of_life/Makefile
+++ b/tests/game_of_life/Makefile
@@ -5,7 +5,7 @@ FLAGS = -O3 -W -Wall -pedantic -DNDEBUG
 INCLUDES = -I. -I$$HOME/include -L. -L$$HOME/lib -lboost_mpi -lboost_serialization -lzoltan
 CXX = mpic++ $(FLAGS)
 
-all: game_of_life_test scalability scalability3d refined refined_scalability3d
+all: game_of_life_test scalability scalability3d refined refined_scalability3d scalability1d
 
 game_of_life_test: game_of_life_test.cpp ../../dccrg.hpp Makefile
 	$(CXX) game_of_life_test.cpp $(INCLUDES) -o game_of_life_test
@@ -16,6 +16,9 @@ scalability: scalability.cpp ../../dccrg.hpp Makefile
 scalability3d: scalability3d.cpp ../../dccrg.hpp Makefile
 	$(CXX) scalability3d.cpp $(INCLUDES) -o scalability3d
 
+scalability1d: scalability1d.cpp ../../dccrg.hpp Makefile
+	$(CXX) scalability1d.cpp $(INCLUDES) -o scalability1d
+
 refined: refined.cpp ../../dccrg.hpp Makefile
 	$(CXX) refined.cpp $(INCLUDES) -o refined
 
@@ -24,4 +27,4 @@ refined_scalability3d: refined_scalability3d.cpp ../../dccrg.hpp Makefile
 
 c: clean
 clean:
-	rm -f game_of_life_test scalability scalability3d refined refined_scalability3d
+	rm -f game_of_life_test scalability scalability3d refined refined_scalability3d scalability1d
