--- a/tests/refine/Makefile
+++ b/tests/refine/Makefile
@@ -1,9 +1,9 @@
-#FLAGS = -O3 -W -Wall -pedantic -DNDEBUG
-FLAGS = -O0 -g -W -Wall -pedantic
+FLAGS = -O3 -W -Wall -pedantic -DNDEBUG
+#FLAGS = -O0 -g -W -Wall -pedantic
 INCLUDES = -I. -I$$HOME/include -L. -L$$HOME/lib -lboost_mpi -lboost_serialization -lzoltan
 CXX = mpic++ $(FLAGS)
 
-all: refine_simple unrefine_simple
+all: refine_simple unrefine_simple scalability
 
 refine_simple: refine_simple.cpp ../../dccrg.hpp Makefile
 	$(CXX) refine_simple.cpp $(INCLUDES) -o refine_simple
@@ -11,6 +11,9 @@ refine_simple: refine_simple.cpp ../../dccrg.hpp Makefile
 unrefine_simple: unrefine_simple.cpp ../../dccrg.hpp Makefile
 	$(CXX) unrefine_simple.cpp $(INCLUDES) -o unrefine_simple
 
+scalability: scalability.cpp ../../dccrg.hpp Makefile
+	$(CXX) scalability.cpp $(INCLUDES) -o scalability
+
 c: clean
 clean:
-	rm -f refine_simple unrefine_simple
+	rm -f refine_simple unrefine_simple scalability
