--- a/tests/refine/Makefile
+++ b/tests/refine/Makefile
@@ -1,5 +1,5 @@
-FLAGS = -O3 -W -Wall -pedantic -DNDEBUG
-#FLAGS = -O0 -g -W -Wall -pedantic
+#FLAGS = -O3 -W -Wall -pedantic -DNDEBUG
+FLAGS = -O0 -g -W -Wall -pedantic
 INCLUDES = -I. -I$$HOME/include -L. -L$$HOME/lib -lboost_mpi -lboost_serialization -lzoltan
 CXX = mpic++ $(FLAGS)
 
