--- a/examples/Makefile
+++ b/examples/Makefile
@@ -1,4 +1,5 @@
 FLAGS = -O3 -W -Wall -Wextra -pedantic -DNDEBUG
+#FLAGS = -O0 -W -Wall -Wextra -pedantic
 INCLUDES = -I$$HOME/include -L$$HOME/lib -lboost_mpi -lboost_serialization -lzoltan
 CXX = mpic++ $(FLAGS)
 
