--- a/tests/game_of_life/Makefile
+++ b/tests/game_of_life/Makefile
@@ -1,11 +1,9 @@
-#FLAGS = -O0 -g -W -Wall -Wextra -pedantic -fprofile-arcs -ftest-coverage
-#FLAGS = -O3 -pg -W -Wall -Wextra -pedantic
 FLAGS = -O3 -W -Wall -Wextra -pedantic -DNDEBUG
-#FLAGS = -O0 -g -W -Wall -Wextra -pedantic
+#FLAGS = -O0 -W -Wall -Wextra -pedantic
 INCLUDES = -I$$HOME/include -L$$HOME/lib -lboost_mpi -lboost_serialization -lzoltan
 CXX = mpic++ $(FLAGS)
 
-all: game_of_life_test scalability scalability3d refined refined2d refined_scalability3d scalability1d
+all: game_of_life_test scalability scalability3d refined refined2d unrefined2d refined_scalability3d scalability1d
 
 game_of_life_test: game_of_life_test.cpp ../../dccrg.hpp Makefile
 	$(CXX) game_of_life_test.cpp $(INCLUDES) -o game_of_life_test
@@ -25,9 +23,12 @@ refined: refined.cpp ../../dccrg.hpp Makefile
 refined2d: refined2d.cpp ../../dccrg.hpp Makefile
 	$(CXX) refined2d.cpp $(INCLUDES) -o refined2d
 
+unrefined2d: unrefined2d.cpp ../../dccrg.hpp Makefile
+	$(CXX) unrefined2d.cpp $(INCLUDES) -o unrefined2d
+
 refined_scalability3d: refined_scalability3d.cpp ../../dccrg.hpp Makefile
 	$(CXX) refined_scalability3d.cpp $(INCLUDES) -o refined_scalability3d
 
 c: clean
 clean:
-	rm -f game_of_life_test scalability scalability3d refined refined2d refined_scalability3d scalability1d
+	rm -f game_of_life_test scalability scalability3d refined refined2d unrefined2d refined_scalability3d scalability1d
