Bring back support for constant size unrefined cells, add a new test

--- a/tests/variable_data_size/Makefile
+++ b/tests/variable_data_size/Makefile
@@ -3,11 +3,14 @@ FLAGS = -O0 -g -W -Wall -Wextra -pedantic
 INCLUDES = -I$$HOME/include -L$$HOME/lib -lboost_mpi -lboost_serialization -lzoltan
 CXX = mpic++ $(FLAGS)
 
-all: variable_data_size
+all: variable_data_size variable_neighbour_data
 
 variable_data_size: variable_data_size.cpp ../../dccrg.hpp Makefile
 	$(CXX) variable_data_size.cpp $(INCLUDES) -o variable_data_size
 
+variable_neighbour_data: variable_neighbour_data.cpp ../../dccrg.hpp Makefile
+	$(CXX) variable_neighbour_data.cpp $(INCLUDES) -o variable_neighbour_data
+
 c: clean
 clean:
-	rm -f variable_data_size
+	rm -f variable_data_size variable_neighbour_data
