--- a/tests/geometry/Makefile
+++ b/tests/geometry/Makefile
@@ -1,16 +1,16 @@
 FLAGS = -O3 -W -Wall -Wextra -pedantic -DNDEBUG
 #FLAGS = -O0 -pg -g -W -Wall -Wextra -pedantic
 INCLUDES = -I$$HOME/include -L$$HOME/lib -lboost_mpi -lboost_serialization -lzoltan
-CXX = mpic++ $(FLAGS)
+CXX = g++ $(FLAGS)
 
-all: constant_grid_speed_1d arbitrary_stretch_speed_1d
+all: constant_grid_speed arbitrary_stretch_speed
 
-constant_grid_speed_1d: constant_grid_speed_1d.cpp ../../dccrg_cell_geometry.hpp Makefile
-	$(CXX) constant_grid_speed_1d.cpp $(INCLUDES) -o constant_grid_speed_1d
+constant_grid_speed: constant_grid_speed.cpp ../../dccrg_cell_geometry.hpp Makefile
+	$(CXX) constant_grid_speed.cpp $(INCLUDES) -o constant_grid_speed
 
-arbitrary_stretch_speed_1d: arbitrary_stretch_speed_1d.cpp ../../dccrg_cell_geometry.hpp Makefile
-	$(CXX) arbitrary_stretch_speed_1d.cpp $(INCLUDES) -o arbitrary_stretch_speed_1d
+arbitrary_stretch_speed: arbitrary_stretch_speed.cpp ../../dccrg_cell_geometry.hpp Makefile
+	$(CXX) arbitrary_stretch_speed.cpp $(INCLUDES) -o arbitrary_stretch_speed
 
 c: clean
 clean:
-	rm -f constant_grid_speed_1d arbitrary_stretch_speed_1d
+	rm -f constant_grid_speed arbitrary_stretch_speed
