--- a/tests/variable_data_size/Makefile
+++ b/tests/variable_data_size/Makefile
@@ -1,5 +1,5 @@
-#FLAGS = -O3 -W -Wall -Wextra -pedantic -DNDEBUG
-FLAGS = -O0 -g -W -Wall -Wextra -pedantic
+FLAGS = -O3 -W -Wall -Wextra -pedantic -DNDEBUG -std=c++0x
+#FLAGS = -O0 -g -W -Wall -Wextra -pedantic -std=c++0x
 INCLUDES = -I$$HOME/include -L$$HOME/lib -lboost_mpi -lboost_serialization -lzoltan
 CXX = mpic++ $(FLAGS)
 
