--- a/tests/game_of_life/Makefile
+++ b/tests/game_of_life/Makefile
@@ -1,10 +1,8 @@
 FLAGS = -O3 -W -Wall -Wextra -pedantic -DNDEBUG -std=c++0x
-#FLAGS = -O3 -W -Wall -Wextra -pedantic -DNDEBUG -std=c++0x -DDCCRG_SEND_SINGLE_CELLS
-#FLAGS = -O0 -W -Wall -Wextra -pedantic
 INCLUDES = -I$$HOME/include -L$$HOME/lib -lboost_mpi -lboost_serialization -lzoltan
 CXX = mpic++ $(FLAGS)
 
-all: game_of_life_test_all_cells game_of_life_test_single_cells scalability scalability3d refined refined2d unrefined2d refined_scalability3d scalability1d
+all: game_of_life_test_all_cells game_of_life_test_single_cells game_of_life_user_data_size scalability scalability3d refined refined2d unrefined2d refined_scalability3d scalability1d
 
 game_of_life_test_all_cells: game_of_life_test.cpp ../../dccrg.hpp Makefile
 	$(CXX) game_of_life_test.cpp $(INCLUDES) -o game_of_life_test_all_cells
