Implement hierarchial partitioning using Zoltan and allow user to set Zoltan parameters.

--- a/tests/load_balancing/Makefile
+++ b/tests/load_balancing/Makefile
@@ -1,13 +1,16 @@
-FLAGS = -O3 -W -Wall -Wextra -pedantic -DNDEBUG -std=c++0x
+FLAGS = -O3 -W -Wall -Wextra -pedantic -std=c++0x
 #FLAGS = -O0 -g -W -Wall -Wextra -pedantic -std=c++0x
 INCLUDES = -I$$HOME/include -L$$HOME/lib -lboost_mpi -lboost_serialization -lzoltan
 CXX = mpic++ $(FLAGS)
 
-all: load_balancing_test
+all: load_balancing_test hierarchial
 
 load_balancing_test: load_balancing_test.cpp ../../dccrg.hpp Makefile
 	$(CXX) load_balancing_test.cpp $(INCLUDES) -o load_balancing_test
 
+hierarchial: hierarchial.cpp ../../dccrg.hpp Makefile
+	$(CXX) hierarchial.cpp $(INCLUDES) -o hierarchial
+
 c: clean
 clean:
-	rm -f load_balancing_test *vtk *visit
+	rm -f load_balancing_test hierarchial *vtk *visit
