--- a/tests/game_of_life/Makefile
+++ b/tests/game_of_life/Makefile
@@ -2,7 +2,7 @@ FLAGS = -O3 -W -Wall -Wextra -pedantic -std=c++0x
 INCLUDES = -I$$HOME/include -L$$HOME/lib -lboost_mpi -lboost_serialization -lzoltan
 CXX = mpic++ $(FLAGS)
 
-all: game_of_life_test_all_cells game_of_life_test_single_cells game_of_life_user_data_size scalability scalability3d refined refined2d unrefined2d refined_scalability3d scalability1d
+all: game_of_life_test_all_cells game_of_life_test_single_cells game_of_life_user_data_size scalability scalability3d refined refined2d unrefined2d refined_scalability3d scalability1d hierarchial_test
 
 game_of_life_test_all_cells: game_of_life_test.cpp ../../dccrg.hpp Makefile
 	$(CXX) game_of_life_test.cpp $(INCLUDES) -o game_of_life_test_all_cells
@@ -34,6 +34,9 @@ unrefined2d: unrefined2d.cpp ../../dccrg.hpp Makefile
 refined_scalability3d: refined_scalability3d.cpp ../../dccrg.hpp Makefile
 	$(CXX) -DNDEBUG refined_scalability3d.cpp $(INCLUDES) -o refined_scalability3d
 
+hierarchial_test: hierarchial_test.cpp ../../dccrg.hpp Makefile
+	$(CXX) hierarchial_test.cpp $(INCLUDES) -o hierarchial_test
+
 c: clean
 clean:
-	rm -f game_of_life_test_all_cells game_of_life_test_single_cells game_of_life_user_data_size scalability scalability3d refined refined2d unrefined2d refined_scalability3d scalability1d *vtk *visit
+	rm -f game_of_life_test_all_cells game_of_life_test_single_cells game_of_life_user_data_size scalability scalability3d refined refined2d unrefined2d refined_scalability3d scalability1d hierarchial_test *vtk *visit
