--- a/tests/geometry/Makefile
+++ b/tests/geometry/Makefile
@@ -1,5 +1,5 @@
-FLAGS = -O3 -W -Wall -Wextra -pedantic -DNDEBUG
-#FLAGS = -O0 -pg -g -W -Wall -Wextra -pedantic
+FLAGS = -O3 -W -Wall -Wextra -pedantic
+#FLAGS = -O0 -pg -g -W -Wall -Wextra -pedantic -DDEBUG
 INCLUDES = -I$$HOME/include -L$$HOME/lib -lboost_mpi -lboost_serialization -lzoltan
 CXX = g++ $(FLAGS)
 
