Record cells outside of the grid as 0 in neighbour lists.
Now neighbour lists contain at lest as many cells (including
0 for neighbours that would be outside of the grid) as the
neighbourhood.

--- a/examples/Makefile
+++ b/examples/Makefile
@@ -18,7 +18,7 @@ game_of_life_with_output: game_of_life_with_output.cpp ../dccrg.hpp Makefile
 	$(MPICXX) game_of_life_with_output.cpp $(INCLUDES) -o game_of_life_with_output
 
 dc2vtk: dc2vtk.cpp ../dccrg.hpp Makefile
-	$(CXX) dc2vtk.cpp -o dc2vtk
+	$(CXX) dc2vtk.cpp $(INCLUDES) -o dc2vtk
 
 c: clean
 clean:
