Don't tell Zoltan that a cell is a neighbor of itself.
Fixes a Zoltan 3.501 crash with periodic boundaries.

--- a/tests/load_balancing/Makefile
+++ b/tests/load_balancing/Makefile
@@ -1,4 +1,5 @@
-FLAGS = -O3 -W -Wall -Wextra -pedantic -std=c++0x
+# Use -Wno-missing-braces until GCC stops warning about valid C++ (http://gcc.gnu.org/bugzilla/show_bug.cgi?id=25137)
+FLAGS = -O3 -W -Wall -Wextra -pedantic -Wno-missing-braces -std=c++0x
 #FLAGS = -O0 -g -W -Wall -Wextra -pedantic -std=c++0x
 INCLUDES = -I$$HOME/include -L$$HOME/lib -lboost_mpi -lboost_serialization -lzoltan
 CXX = mpic++ $(FLAGS)
