Finish making the geometry of Dccrg a template class parameter.

--- a/examples/Makefile
+++ b/examples/Makefile
@@ -6,18 +6,20 @@ INCLUDES = -I$$HOME/include -L$$HOME/lib -lboost_mpi -lboost_serialization -lzol
 MPICXX = mpic++ $(FLAGS)
 CXX = g++ $(FLAGS)
 
+HEADERS = ../dccrg.hpp ../dccrg_constant_geometry.hpp
+
 all: simple_game_of_life game_of_life game_of_life_with_output dc2vtk
 
-game_of_life: game_of_life.cpp ../dccrg.hpp Makefile
+game_of_life: game_of_life.cpp $(HEADERS) Makefile
 	$(MPICXX) game_of_life.cpp $(INCLUDES) -o game_of_life
 
-simple_game_of_life: simple_game_of_life.cpp ../dccrg.hpp Makefile
+simple_game_of_life: simple_game_of_life.cpp $(HEADERS) Makefile
 	$(MPICXX) simple_game_of_life.cpp $(INCLUDES) -o simple_game_of_life
 
-game_of_life_with_output: game_of_life_with_output.cpp ../dccrg.hpp Makefile
+game_of_life_with_output: game_of_life_with_output.cpp $(HEADERS) Makefile
 	$(MPICXX) game_of_life_with_output.cpp $(INCLUDES) -o game_of_life_with_output
 
-dc2vtk: dc2vtk.cpp ../dccrg_geometry.hpp Makefile
+dc2vtk: dc2vtk.cpp ../dccrg_constant_geometry.hpp Makefile
 	$(CXX) dc2vtk.cpp $(INCLUDES) -o dc2vtk
 
 c: clean
