--- a/tests/load_balancing/Makefile
+++ b/tests/load_balancing/Makefile
@@ -4,14 +4,14 @@ FLAGS = -O3 -W -Wall -Wextra -pedantic -Wno-missing-braces -std=c++0x
 INCLUDES = -I$$HOME/include -L$$HOME/lib -lboost_mpi -lboost_serialization -lzoltan
 CXX = mpic++ $(FLAGS)
 
-all: load_balancing_test hierarchial
+all: load_balancing_test hierarchical
 
-load_balancing_test: load_balancing_test.cpp ../../dccrg.hpp Makefile
+load_balancing_test: load_balancing_test.cpp ../../dccrg.hpp ../../dccrg_constant_geometry.hpp Makefile
 	$(CXX) load_balancing_test.cpp $(INCLUDES) -o load_balancing_test
 
-hierarchial: hierarchial.cpp ../../dccrg.hpp Makefile
-	$(CXX) hierarchial.cpp $(INCLUDES) -o hierarchial
+hierarchical: hierarchical.cpp ../../dccrg.hpp ../../dccrg_constant_geometry.hpp Makefile
+	$(CXX) hierarchical.cpp $(INCLUDES) -o hierarchical
 
 c: clean
 clean:
-	rm -f load_balancing_test hierarchial *vtk *visit
+	rm -f load_balancing_test hierarchical *vtk *visit
