--- a/tests/game_of_life/Makefile
+++ b/tests/game_of_life/Makefile
@@ -1,6 +1,6 @@
 # Use -Wno-missing-braces until GCC stops warning about valid C++ (http://gcc.gnu.org/bugzilla/show_bug.cgi?id=25137)
 FLAGS = -O3 -W -Wall -Wextra -pedantic -Wno-missing-braces -std=c++0x
-INCLUDES = -I$$HOME/include -L$$HOME/lib -lboost_mpi -lboost_serialization -lzoltan
+INCLUDES = -I$$HOME/include -L$$HOME/lib -lboost_mpi -lboost_program_options -lboost_serialization -lzoltan
 CXX = mpic++ $(FLAGS)
 
 PROGRAMS =						\
