Add a datatype version of 2d advection test.

--- a/tests/advection/Makefile
+++ b/tests/advection/Makefile
@@ -2,7 +2,7 @@ FLAGS = -O3 -W -Wall -Wextra -pedantic -std=c++0x
 INCLUDES = -I$$HOME/include -L$$HOME/lib -lboost_mpi -lboost_program_options -lboost_serialization -lzoltan
 CXX = mpic++ $(FLAGS)
 
-PROGRAMS = 2d dc2vtk 2d_debug
+PROGRAMS = 2d_mpi 2d_mpi_datatype dc2vtk 2d_debug
 
 HEADERS = \
 	cell.hpp \
@@ -12,8 +12,11 @@ HEADERS = \
 
 all: $(PROGRAMS)
 
-2d: 2d.cpp $(HEADERS) Makefile
-	$(CXX) -DNDEBUG 2d.cpp $(INCLUDES) -o 2d
+2d_mpi: 2d.cpp $(HEADERS) Makefile
+	$(CXX) -DNDEBUG 2d.cpp $(INCLUDES) -o 2d_mpi
+
+2d_mpi_datatype: 2d.cpp $(HEADERS) Makefile
+	$(CXX) -DNDEBUG -DDCCRG_USER_MPI_DATA_TYPE 2d.cpp $(INCLUDES) -o 2d_mpi_datatype
 
 2d_debug: 2d.cpp $(HEADERS) Makefile
 	$(CXX) -DDEBUG 2d.cpp $(INCLUDES) -o 2d_debug
