--- a/tests/advection/Makefile
+++ b/tests/advection/Makefile
@@ -1,4 +1,5 @@
-FLAGS = -O3 -W -Wall -Wextra -pedantic -std=c++0x
+# use -fno-builtin-sprintf to avoid warning about gnu specific formatting in sprintf by boost lexical_cast
+FLAGS = -O3 -W -Wall -Wextra -pedantic -std=c++0x -fno-builtin-sprintf
 INCLUDES = -I$$HOME/include -L$$HOME/lib -lboost_mpi -lboost_program_options -lboost_serialization -lzoltan
 CXX = mpic++ $(FLAGS)
 
@@ -13,10 +14,10 @@ HEADERS = \
 all: $(PROGRAMS)
 
 2d_mpi: 2d.cpp $(HEADERS) Makefile
-	$(CXX) -DNDEBUG 2d.cpp $(INCLUDES) -o 2d_mpi
+	$(CXX) 2d.cpp $(INCLUDES) -o 2d_mpi
 
 2d_mpi_datatype: 2d.cpp $(HEADERS) Makefile
-	$(CXX) -DNDEBUG -DDCCRG_USER_MPI_DATA_TYPE 2d.cpp $(INCLUDES) -o 2d_mpi_datatype
+	$(CXX) -DDCCRG_USER_MPI_DATA_TYPE 2d.cpp $(INCLUDES) -o 2d_mpi_datatype
 
 2d_debug: 2d.cpp $(HEADERS) Makefile
 	$(CXX) -DDEBUG 2d.cpp $(INCLUDES) -o 2d_debug
