--- a/tests/constructors/Makefile
+++ b/tests/constructors/Makefile
@@ -1,4 +1,4 @@
-FLAGS = -O3 -W -Wall -Wextra -pedantic
+FLAGS = -O3 -W -Wall -Wextra -pedantic -std=c++0x
 INCLUDES = -I$$HOME/include -L$$HOME/lib -lboost_mpi -lboost_program_options -lboost_serialization -lzoltan
 CXX = mpic++ $(FLAGS)
 
