--- a/tests/refine/Makefile
+++ b/tests/refine/Makefile
@@ -1,5 +1,4 @@
-FLAGS = -O3 -W -Wall -Wextra -pedantic
-#FLAGS = -O0 -g -W -Wall -Wextra -pedantic -std=c++0x -DDEBUG
+FLAGS = -O3 -W -Wall -Wextra -pedantic -std=c++0x
 INCLUDES = -I$$HOME/include -L$$HOME/lib -lboost_mpi -lboost_program_options -lboost_serialization -lzoltan
 CXX = mpic++ $(FLAGS)
 
