Separate send & receive list recalculation for user neighborhood into another function and add an interlaced game of life test.

--- a/tests/user_neighborhood/Makefile
+++ b/tests/user_neighborhood/Makefile
@@ -2,7 +2,7 @@ FLAGS = -O3 -W -Wall -Wextra -pedantic -std=c++0x
 INCLUDES = -I$$HOME/include -L$$HOME/lib -lboost_mpi -lboost_serialization -lzoltan
 CXX = mpic++ $(FLAGS)
 
-PROGRAMS = neighbor_list_length
+PROGRAMS = neighbor_list_length game_of_life
 
 HEADERS = \
 	../../dccrg.hpp \
@@ -14,7 +14,14 @@ all: $(PROGRAMS)
 neighbor_list_length: neighbor_list_length.cpp $(HEADERS) Makefile
 	$(CXX) -DDEBUG neighbor_list_length.cpp $(INCLUDES) -o neighbor_list_length
 
+game_of_life: game_of_life.cpp $(HEADERS) Makefile
+	$(CXX) -DDEBUG game_of_life.cpp $(INCLUDES) -o game_of_life
+
+d: data
+data:
+	rm -f *.vtk *.visit
+
 c: clean
-clean:
+clean: data
 	rm -f $(PROGRAMS)
 
