Add an advection test to user neighborhood and fix the case when unrefining.

--- a/tests/user_neighborhood/Makefile
+++ b/tests/user_neighborhood/Makefile
@@ -1,8 +1,9 @@
-FLAGS = -O3 -W -Wall -Wextra -pedantic -std=c++0x
-INCLUDES = -I$$HOME/include -L$$HOME/lib -lboost_mpi -lboost_serialization -lzoltan
+# use -fno-builtin-sprintf to avoid warning about gnu specific formatting in sprintf by boost lexical_cast
+FLAGS = -O3 -W -Wall -Wextra -pedantic -std=c++0x -fno-builtin-sprintf
+INCLUDES = -I$$HOME/include -L$$HOME/lib -lboost_mpi -lboost_program_options -lboost_serialization -lzoltan
 CXX = mpic++ $(FLAGS)
 
-PROGRAMS = neighbor_list_length game_of_life
+PROGRAMS = neighbor_list_length game_of_life advection
 
 HEADERS = \
 	../../dccrg.hpp \
@@ -17,9 +18,12 @@ neighbor_list_length: neighbor_list_length.cpp $(HEADERS) Makefile
 game_of_life: game_of_life.cpp $(HEADERS) Makefile
 	$(CXX) -DDEBUG game_of_life.cpp $(INCLUDES) -o game_of_life
 
+advection: advection.cpp $(HEADERS) ../advection/cell.hpp ../advection/save.hpp Makefile
+	$(CXX) -DDEBUG advection.cpp $(INCLUDES) -o advection
+
 d: data
 data:
-	rm -f *.vtk *.visit
+	rm -f *.dc *.vtk *.visit
 
 c: clean
 clean: data
